--- a/src/view/primeFaces/propertyEditors/OutputLabelPropertyEditor.mxml
+++ b/src/view/primeFaces/propertyEditors/OutputLabelPropertyEditor.mxml
@@ -10,5 +10,6 @@
 	<primeFaces:BasicsForm/>
     <s:FormHeading label="Data" skinClass="skins.FormHeadingSkin" />
     <forms:TextForm label="Value" textProperty="text"/>
+    <forms:TextForm id="txtFor" label="For" textProperty="forAttribute"/>
     <forms:ToggleButtonSelectedForm label="Indicate required (Displays *)" textProperty="indicateRequired"/>
 </suportclasses:BasePropertyEditor>
