--- a/src/view/EditingSurface.mxml
+++ b/src/view/EditingSurface.mxml
@@ -21,6 +21,8 @@
 	</fx:Declarations>
 
 	<fx:Script><![CDATA[
+		import mx.containers.GridItem;
+		import mx.containers.GridRow;
 		import mx.controls.scrollClasses.ScrollBar;
 		import mx.core.BitmapAsset;
 		import mx.core.DragSource;
@@ -46,6 +48,13 @@
 		import view.interfaces.IMultiViewContainer;
 		import view.interfaces.INonDeletableSurfaceComponent;
 		import view.interfaces.ISurfaceComponent;
+		import mx.core.Container;
+
+		import view.primeFaces.supportClasses.events.GridEvent;
+
+		import view.primeFaces.surfaceComponents.components.Div;
+
+		import view.primeFaces.surfaceComponents.components.Grid;
 
 		private static const SMALL_NUDGE:int = 1;
 		private static const LARGE_NUDGE:int = 10;
@@ -160,6 +169,11 @@
 			{
 				itemContainer = SkinnableContainer(item);
 			}
+			else if (item is Grid)
+			{
+				this.prepareGrid(item as Grid);
+				return;
+			}
 			else if (item is Navigator)
 			{
 				this.prepareContainer(item as SkinnableContainerBase);
@@ -170,6 +184,7 @@
 				this.prepareContainer(item as UIComponent);
 				return;
 			}
+
 			this.prepareContainer(itemContainer);
 		}
 
@@ -184,27 +199,24 @@
 			var container:IVisualElementContainer = IVisualElementContainer(item.parent);
 			container.removeElement(IVisualElement(item));
 
-			var itemContainer:SkinnableContainer = null;
 			if (item is IMultiViewContainer)
 			{
 				var multiViewContainer:IMultiViewContainer = IMultiViewContainer(item);
 				multiViewContainer.removeEventListener(IndexChangeEvent.CHANGE, multiViewContainer_indexChangeHandler);
-				itemContainer = multiViewContainer.selectedView;
+				this.cleanupContainer( multiViewContainer.selectedView);
 			}
 			else if (item is SkinnableContainer)
 			{
-				itemContainer = SkinnableContainer(item);
+				this.cleanupContainer(SkinnableContainer(item));
 			}
 			else if (item is Navigator)
 			{
 				this.cleanupContainer(item as SkinnableContainerBase);
-
-				this.selectedItem = null;
-				hasChanged = this.numElements > 0 && _wasLoaded;
-				return;
 			}
-
-			this.cleanupContainer(itemContainer);
+			else if (item is Grid)
+			{
+				this.cleanupGrid(item as Grid);
+			}
 
 			this.selectedItem = null;
 			hasChanged = this.numElements > 0 && _wasLoaded;
@@ -221,7 +233,7 @@
 			container.addEventListener(DragEvent.DRAG_DROP, skinnableContainer_dragDropHandler);
 		}
 
-		private function cleanupContainer(container:SkinnableContainerBase):void
+		private function cleanupContainer(container:UIComponent):void
 		{
 			if (container === null)
 			{
@@ -230,6 +242,104 @@
 			container.removeEventListener(DragEvent.DRAG_ENTER, skinnableContainer_dragEnterOrOverHandler);
 			container.removeEventListener(DragEvent.DRAG_OVER, skinnableContainer_dragEnterOrOverHandler);
 			container.removeEventListener(DragEvent.DRAG_DROP, skinnableContainer_dragDropHandler);
+		}
+
+		private function prepareGrid(grid:Grid):void
+		{
+			if (grid === null)
+			{
+				return;
+			}
+
+			grid.addEventListener("gridElementAdded", onGridElementAdded);
+			grid.addEventListener("gridElementRemoved", onGridElementRemoved);
+
+			var gridNumElements:int = grid.numElements;
+			for (var row:int = 0; row < gridNumElements; row++)
+			{
+				var gridRow:GridRow = grid.getElementAt(row) as GridRow;
+				if (gridRow)
+				{
+					var gridColNumElements:int = gridRow.numElements;
+					for (var col:int = 0; col < gridColNumElements; col++)
+					{
+						var gridCol:GridItem = gridRow.getElementAt(col) as GridItem;
+						if (gridCol)
+						{
+							var div:Div = gridCol.getElementAt(0) as Div;
+
+							div.addEventListener(DragEvent.DRAG_ENTER, skinnableContainer_dragEnterOrOverHandler);
+							div.addEventListener(DragEvent.DRAG_OVER, skinnableContainer_dragEnterOrOverHandler);
+							div.addEventListener(DragEvent.DRAG_DROP, skinnableContainer_dragDropHandler);
+						}
+					}
+				}
+			}
+		}
+
+		private function onGridElementAdded(event:GridEvent):void
+		{
+			if (event.items)
+			{
+				for (var i:int = 0; i < event.items.length; i++)
+				{
+					var gridItem:GridItem = event.items[i];
+					var div:Div = gridItem.getElementAt(0) as Div;
+
+					div.addEventListener(DragEvent.DRAG_ENTER, skinnableContainer_dragEnterOrOverHandler);
+					div.addEventListener(DragEvent.DRAG_OVER, skinnableContainer_dragEnterOrOverHandler);
+					div.addEventListener(DragEvent.DRAG_DROP, skinnableContainer_dragDropHandler);
+				}
+			}
+		}
+
+		private function onGridElementRemoved(event:GridEvent):void
+		{
+			if (event.items)
+			{
+				for (var i:int = 0; i < event.items.length; i++)
+				{
+					var gridItem:GridItem = event.items[i];
+					var div:Div = gridItem.getElementAt(0) as Div;
+
+					div.removeEventListener(DragEvent.DRAG_ENTER, skinnableContainer_dragEnterOrOverHandler);
+					div.removeEventListener(DragEvent.DRAG_OVER, skinnableContainer_dragEnterOrOverHandler);
+					div.removeEventListener(DragEvent.DRAG_DROP, skinnableContainer_dragDropHandler);
+				}
+			}
+		}
+
+		private function cleanupGrid(grid:Grid):void
+		{
+			if (grid === null)
+			{
+				return;
+			}
+
+			grid.removeEventListener("gridElementAdded", onGridElementAdded);
+			grid.removeEventListener("gridElementRemoved", onGridElementRemoved);
+
+			var gridNumElements:int = grid.numElements;
+			for (var row:int = 0; row < gridNumElements; row++)
+			{
+				var gridRow:GridRow = grid.getElementAt(row) as GridRow;
+				if (gridRow)
+				{
+					var gridColNumElements:int = gridRow.numElements;
+					for (var col:int = 0; col < gridColNumElements; col++)
+					{
+						var gridCol:GridItem = gridRow.getElementAt(col) as GridItem;
+						if (gridCol)
+						{
+							var div:Div = gridCol.getElementAt(0) as Div;
+
+							div.removeEventListener(DragEvent.DRAG_ENTER, skinnableContainer_dragEnterOrOverHandler);
+							div.removeEventListener(DragEvent.DRAG_OVER, skinnableContainer_dragEnterOrOverHandler);
+							div.removeEventListener(DragEvent.DRAG_DROP, skinnableContainer_dragDropHandler);
+						}
+					}
+				}
+			}
 		}
 
 		private function showDropOverlay(dropTarget:UIComponent):void
@@ -441,7 +551,7 @@
 			{
 				contentGroup = container["contentGroup"];
 			}
-			else if (container is IMainApplication)
+			else if (container is IMainApplication || container is Container)
 			{
 				contentGroup = container;
 			}
