PrimeFaces Grid: Make first columns selected default (reference prominic/Moonshine-IDE#220)

--- a/src/view/primeFaces/forms/GridForm.mxml
+++ b/src/view/primeFaces/forms/GridForm.mxml
@@ -114,6 +114,7 @@
 			this.columnsDataProvider = this.rowsDataProvider.getItemAt(0).columns;
 
 			this.dgRows.selectedIndex = 0;
+			this.columnList.selectedIndex = 0;
 		}
 
 		protected function onGridSelectionChanged(event:GridSelectionEvent):void
