--- a/src/view/primeFaces/propertyEditors/FieldsetPropertyEditor.mxml
+++ b/src/view/primeFaces/propertyEditors/FieldsetPropertyEditor.mxml
@@ -15,4 +15,6 @@
 	<forms:ToggleButtonSelectedForm label="Toggleable" textProperty="toggleable"/>
 	<forms:TextForm label="Toggle Duration" textProperty="duration"
 					enabled="{Object(selectedItem).toggleable}" restrict="0-9"/>
+	<primeFaces:DivLayoutForm />
+
 </suportclasses:BasePropertyEditor>
