--- a/src/view/primeFaces/forms/GridForm.mxml
+++ b/src/view/primeFaces/forms/GridForm.mxml
@@ -10,10 +10,14 @@
 		import data.GridListItem;
 
 		import mx.collections.ArrayList;
+		import mx.containers.GridItem;
 		import mx.containers.GridRow;
 		import mx.events.FlexEvent;
 
 		import spark.events.GridSelectionEvent;
+		import spark.events.IndexChangeEvent;
+
+		import view.primeFaces.surfaceComponents.components.Div;
 
 		import view.primeFaces.surfaceComponents.components.Grid;
 
@@ -24,6 +28,21 @@
 
 		private var itemAdded:Boolean;
 
+		private var _selectedCell:Div;
+
+		[Bindable]
+		public function get selectedCell():Div
+		{
+			return _selectedCell;
+		}
+
+		public function set selectedCell(value:Div):void
+		{
+			if (_selectedCell != value)
+			{
+				_selectedCell = value;
+			}
+		}
 
 		private function addRowButton_clickHandler(event:MouseEvent):void
 		{
@@ -42,6 +61,9 @@
 			this.itemAdded = true;
 			this.dgRows.invalidateDisplayList();
 			this.invalidateDisplayList();
+
+			this.columnList.selectedIndex = rowItem.columns.length - 1;
+			this.selectedCell = this.getSelectedCell();
 		}
 
         private function addColumnButton_clickHandler(event:MouseEvent):void
@@ -68,6 +90,9 @@
 				dgRows.selectedIndex = 0;
 				dgRows.ensureCellIsVisible(0);
 				this.columnsDataProvider = this.rowsDataProvider.getItemAt(dgRows.selectedIndex).columns;
+
+				this.columnList.selectedIndex = this.columnsDataProvider.length - 1;
+				this.selectedCell = this.getSelectedCell();
 			}
 		}
 
@@ -78,6 +103,11 @@
 
 			var rowItem:GridListItem = dgRows.selectedItem as GridListItem;
 			rowItem.columns.removeItemAt(columnList.selectedIndex);
+
+			dgRows.selectedIndex = rowsDataProvider.length - 1;
+			columnList.selectedIndex = columnsDataProvider.length - 1;
+
+			this.selectedCell = this.getSelectedCell();
         }
 
 		override protected function updateDisplayList(unscaledWidth:Number, unscaledHeight:Number):void
@@ -115,13 +145,33 @@
 
 			this.dgRows.selectedIndex = 0;
 			this.columnList.selectedIndex = 0;
+
+			this.selectedCell = this.getSelectedCell();
 		}
 
 		protected function onGridSelectionChanged(event:GridSelectionEvent):void
 		{
 			var gridListItem:GridListItem = dgRows.selectedItem as GridListItem;
 			this.columnsDataProvider = gridListItem.columns;
+			this.columnList.selectedIndex = gridListItem.columns.length - 1;
+
+			this.selectedCell = this.getSelectedCell();
 		}
+
+		private function onColumnListChange(event:IndexChangeEvent):void
+		{
+			this.selectedCell = this.getSelectedCell();
+		}
+
+		private function getSelectedCell():Div
+		{
+			var grid:Grid = this.selectedItem as Grid;
+			var gridRow:GridRow = grid.getElementAt(this.dgRows.selectedIndex) as GridRow;
+			var gridItem:GridItem = gridRow.getElementAt(this.columnList.selectedIndex) as GridItem;
+
+			return gridItem.getElementAt(0) as Div;
+		}
+
 		]]>
 	</fx:Script>
     <suportclasses:layout>
@@ -150,7 +200,7 @@
     </s:FormItem>
 	<s:FormItem label="Columns" skinClass="skins.StackedFormItemSkin">
 		<s:List id="columnList" width="100%" height="30" labelField="label"
-				dataProvider="{columnsDataProvider}">
+				dataProvider="{columnsDataProvider}" change="onColumnListChange(event)">
 			<s:layout>
 				<s:HorizontalLayout gap="2" horizontalAlign="left" verticalAlign="middle"/>
 			</s:layout>
