--- a/src/view/EditingSurface.mxml
+++ b/src/view/EditingSurface.mxml
@@ -25,6 +25,7 @@
 		import mx.containers.GridRow;
 		import mx.controls.scrollClasses.ScrollBar;
 		import mx.core.BitmapAsset;
+		import mx.core.Container;
 		import mx.core.DragSource;
 		import mx.core.IUIComponent;
 		import mx.core.IVisualElement;
@@ -34,29 +35,24 @@
 		import mx.managers.DragManager;
 		import mx.managers.IFocusManagerComponent;
 		import mx.managers.PopUpManager;
-
+		
 		import spark.components.SkinnableContainer;
 		import spark.components.supportClasses.ScrollBarBase;
 		import spark.components.supportClasses.SkinnableContainerBase;
 		import spark.containers.Navigator;
 		import spark.events.IndexChangeEvent;
-
+		
 		import utils.EditingSurfaceReader;
 		import utils.EditingSurfaceWriter;
-
+		
+		import view.events.PropertyEditorChangeEvent;
 		import view.interfaces.IMainApplication;
-
 		import view.interfaces.IMultiViewContainer;
 		import view.interfaces.INonDeletableSurfaceComponent;
 		import view.interfaces.ISurfaceComponent;
-
-		import mx.core.Container;
-
-		import view.suportClasses.events.SurfaceComponentEvent;
-
 		import view.primeFaces.surfaceComponents.components.Div;
-
 		import view.primeFaces.surfaceComponents.components.Grid;
+		import view.suportClasses.events.SurfaceComponentEvent;
 
 		private static const SMALL_NUDGE:int = 1;
 		private static const LARGE_NUDGE:int = 10;
@@ -197,7 +193,9 @@
 		public function deleteItem(item:ISurfaceComponent):void
 		{
 			if (item is INonDeletableSurfaceComponent) return;
-
+			
+			item.dispatchEvent(new Event(PropertyEditorChangeEvent.PROPERTY_EDITOR_ITEM_DELETING));
+			
 			var container:IVisualElementContainer = IVisualElementContainer(item.parent);
 			container.removeElement(IVisualElement(item));
 
